-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.14.2
-
None
-
-
15026f309b3c69b94de39e0cbeba09dd8bdd5e29 (qt/qtbase/5.15)
Rendering of tab widget in Qt 5.14.2 on macOS is faulty. Most left/right inactive tab header always leaves an unnecessary gap (see pictures below). It was not a case before (up to 5.14.1).
There is the same problem in both light and dark mode but in dark mode it is more clearly visible due to background colour.
To reproduce - it is enough to open Qt Designer and put tab widget in new design. When used in compiled widget it behaves exactly the same as in Qt Designer preview.
I also noticed now when looking at below pictures that active tab is shifted downwards by few pixels - it is unexpected behaviour as well.


- is duplicated by
-
QTBUG-84681 On macOS, the first and the last tabs of QTabBar are rendered incorrectly if they are not selected
-
- Closed
-
-
QTBUG-83745 Poor QTabWidget drawing on macOS Qt 5.15 beta4
-
- Closed
-